--- a/lib/generators/piwik_analytics/install/templates/config/piwik.yml
+++ b/lib/generators/piwik_analytics/install/templates/config/piwik.yml
@@ -1,8 +1,19 @@
+# Configuration:
+# 
+# disabled
+#   false if tracking tag should be shown
+# use_async
+#   Set to true if you want to use asynchronous tracking
+# url
+#   The url of your piwik instance (e.g. localhost/piwik/
+# id_site
+#   The id of your website inside Piwik
+#
 production:
   piwik:
     id_site: 1
     url: localhost
-    use_async: true
+    use_async: false
     disabled: false
 
 development:
@@ -10,7 +21,7 @@ development:
     id_site: 1
     url: localhost
     disabled: true
-    use_async: true
+    use_async: false
     hostname: localhost
 
 test:
@@ -18,5 +29,5 @@ test:
     id_site: 1
     url: localhost
     disabled: true
-    use_async: true
+    use_async: false
     hostname: localhost
