--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 rvm:
-  - 1.8.7
   - 1.9.2
   - 1.9.3
-  - jruby-18mode
   - jruby-19mode
-  - rbx-18mode
   - rbx-19mode
   - ruby-head
   - ree
+
+matrix:
+  allow_failures:
+    rvm: ree
+
 gemfile: Gemfile
